# ldapie

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  ROADMAP.md  completion.bash  completion.fish  completion.zsh  ldapie  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_multivalue.py  test_multivalue_display.py
.github/workflows/: ci-cd.yml  release.yml
scripts/: bump_version.py
src/: ldapie.py  ldapie_utils.py  rich_formatter.py
src/ldapie/: __init__.py  entry_operations.py  help_context.py  help_overlay.py  interactive.py  ldapie.py  ldapie_utils.py  output.py  rich_formatter.py  schema.py  search.py  tab_completion.py  utils.py
src/ldapie/core/: __init__.py  config.py  ldapie.py
src/ldapie/interactive/: __init__.py  help_overlay.py  shell.py  shell_enhancements.py
src/ldapie/operations/: __init__.py
src/ldapie/ui/: __init__.py  rich_formatter.py
src/ldapie/utils/: __init__.py  connection.py  helpers.py  parsers.py
tests/: demo.py  mock_ldap.py  test_completion.py  test_context_help.py  test_ldapcli_utils.py
tests/core/: test_core.py
tests/interactive/: test_completion.py  test_context_help.py
tests/operations/: test_operations.py
tests/ui/: test_ui.py
tests/utils/: test_ldapcli_utils.py  test_utils.py
