[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldapie"
description = "A modern LDAP client CLI tool inspired by HTTPie"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
    {name = "LDAPie Team", email = "author@example.com"}
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "ldap3.*"
ignore_missing_imports = true
