[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldapie"
description = "A modern LDAP client CLI tool inspired by HTTPie"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
    {name = "LDAPie Team", email = "ruslan.fialkovsky@gmail.com"}
]
dependencies = [
    "ldap3>=2.9,<3.0",
    "rich>=12.0.0",
    "click>=7.0",
    "pydantic>=1.9.0",
    "typer>=0.6.0",
    "pyyaml>=6.0",
    "cryptography>=38.0.0",
    "python-dotenv>=0.20.0",
    "python-Levenshtein>=0.20.0"
]

[project.scripts]
ldapie = "ldapie.ldapie:cli"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "ldap3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "python_Levenshtein.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
